--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
      <header class="header">
         <div class="header__container container">
     <nav class="nav">
-    <a href="" lang="en" class="link logo"><span class="logo__part">Web</span>Studio</a>
+        <a href="" lang="en" class="nav__logo link"><span class="nav__logo-part">Web</span>Studio</a>
     <ul class="list__nav list ">
     <li class="nav__item"><a href="./index.html" class="nav__link link">Студія</a></li>
     <li class="nav__item"><a href="./portfolio.html" class="nav__link nav__link-current link">Портфоліо</a></li>
@@ -33,123 +33,123 @@
 </div>
 </header>
         <main>
-            <section class="section filter">
-            <div class="container container-portfolio">
-    <h1 class="vissualy-hidden">Портфоліо</h1>
-    <ul class="list list-filter-btn">
-        <li class="item-filter"><button class="button button-portfolio" type="button">Усі</button></li>
-        <li class="item-filter"><button class="button button-portfolio" type="button">Веб-сайти</button></li>
-        <li class="item-filter"><button class="button button-portfolio" type="button">Додатки</button></li>
-        <li class="item-filter"><button class="button button-portfolio" type="button">Дизайн</button></li>
-        <li class="item-filter"><button class="button button-portfolio" type="button">Маркетинг</button></li>
+            <section class=" portfolio section">
+            <div class="portfolio__container container">
+    <h1 class="title-vissualy-hidden">Портфоліо</h1>
+    <ul class="portfolio__list list">
+        <li class="portfolio__item"><button class="portfolio__button button" type="button">Усі</button></li>
+        <li class="portfolio__item"><button class="portfolio__button button" type="button">Веб-сайти</button></li>
+        <li class="portfolio__item"><button class="portfolio__button button" type="button">Додатки</button></li>
+        <li class="portfolio__item"><button class="portfolio__button button" type="button">Дизайн</button></li>
+        <li class="portfolio__item"><button class="portfolio__button button" type="button">Маркетинг</button></li>
     </ul>
-    <ul class="list list-filter">
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img1.jpg" alt="Веб-сайт" width="370" height="294">
+    <ul class="filter list">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img1.jpg" alt="Веб-сайт" width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-           <div class="card-portfolio">
-            <h3 class="filter-caption">Технокряк</h3>
-            <p class="filter-text">Веб-сайт</p>
+           <div class="filter__card">
+            <h3 class="filter__undertitle">Технокряк</h3>
+            <p class="filter__text">Веб-сайт</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img2.jpg" alt="Постер"  width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img2.jpg" alt="Постер"  width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption">Постер <span lang="en"> New Orlean vs Golden Star </span></h3>
-            <p class="filter-text">Дизайн</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle">Постер <span lang="en"> New Orlean vs Golden Star </span></h3>
+            <p class="filter__text">Дизайн</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img3.jpg" alt="Емблема"  width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img3.jpg" alt="Емблема"  width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption">Ресторан <span lang="en">Seafood</span></h3>
-            <p class="filter-text">Додаток</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle">Ресторан <span lang="en">Seafood</span></h3>
+            <p class="filter__text">Додаток</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img4.jpg" alt="Навушники"  width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img4.jpg" alt="Навушники"  width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption">Проєкт <span lang="en">Prime</span></h3>
-            <p class="filter-text">Маркетинг</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle">Проєкт <span lang="en">Prime</span></h3>
+            <p class="filter__text">Маркетинг</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img5.jpg" alt="Книги" width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img5.jpg" alt="Книги" width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption">Проєкт  <span lang="en">Boxes</span></h3>
-            <p class="filter-text">Додаток</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle">Проєкт  <span lang="en">Boxes</span></h3>
+            <p class="filter__text">Додаток</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img6.jpg" alt="Монітор" width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img6.jpg" alt="Монітор" width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption" lang="en">Inspiration has no Borders</h3>
-            <p class="filter-text">Веб-сайт</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle" lang="en">Inspiration has no Borders</h3>
+            <p class="filter__text">Веб-сайт</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img7.jpg" alt="Книга" width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img7.jpg" alt="Книга" width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption">Видання <span lang="en">Limited Edition</span></h3>
-            <p class="filter-text">Дизайн</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle">Видання <span lang="en">Limited Edition</span></h3>
+            <p class="filter__text">Дизайн</p>
        </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img8.jpg" alt="Фото" width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img8.jpg" alt="Фото" width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption">Проєкт <span lang="en">LAB</span></h3>
-            <p class="filter-text">Маркетинг</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle">Проєкт <span lang="en">LAB</span></h3>
+            <p class="filter__text">Маркетинг</p>
         </div>
         </li>
-        <li class="list-item-filter">
-            <div class="filter-thumb">
-            <img class="filter-img" src="./image/portfolio/img9.jpg" alt="Ноутбук" width="370" height="294">
+        <li class="filter__item">
+            <div class="filter__thumb">
+            <img class="filter__img" src="./image/portfolio/img9.jpg" alt="Ноутбук" width="370" height="294">
             <div class="overlay">
-                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
             </div>
         </div>
-            <div class="card-portfolio">
-            <h3 class="filter-caption" lang="en">Growing Business</h3>
-            <p class="filter-text">Додаток</p>
+            <div class="filter__card">
+            <h3 class="filter__undertitle" lang="en">Growing Business</h3>
+            <p class="filter__text">Додаток</p>
         </div>
         </li>
     </ul>
@@ -158,59 +158,58 @@
 </main>
 <!----------FOOTER------->
 <footer class="footer">
-    <div class="container footer-container">
-        <div class="adress-container">
-    <a href="./index.html" class="link footer-link" lang="en"> <span class="footer-logo">Web</span>Studio</a>
-    <address>
-        <ul class="list list-footer">
-            <li class="list-footer-item"><a class="link footer-link-nav" href="https://goo.gl/maps/DCdvdgWx7HsUr94s7" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li class="list-footer-item"><a class="link footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list-footer-item"><a class="link footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </address>
-</div>
-    <div class="join">
-        <p class="text-join">Приєднуйтесь</p>
-        <ul class="list list-join">
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка instagram" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка instagram"> <use href="./icons.svg#instagram"></use></svg>
+    <div class="footer__container container">
+        <div >
+        <a href="./index.html" class="footer__logo link" lang="en"> <span class="footer__logo-part">Web</span>Studio</a>
+        <address>
+            <ul class="footer__list list">
+                <li class="footer__item"><a class="footer__link-nav link" href="https://goo.gl/maps/DCdvdgWx7HsUr94s7" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li class="footer__item"><a class="footer__link-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="footer__item"><a class="footer__link-contact link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </address>
+        </div>
+        <div class="join">
+        <p class="join__text">Приєднуйтесь</p>
+        <ul class="join__list list">
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка instagram" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка instagram"> <use href="./icons.svg#instagram"></use></svg>
                     </a>
                 </li>
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка twiter" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка twiter"> <use href="./icons.svg#twiter"></use></svg>
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка twiter" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка twiter"> <use href="./icons.svg#twiter"></use></svg>
                     </a>
                 </li>
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка facebook" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка facebook"> <use href="./icons.svg#facebook"></use></svg>
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка facebook" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка facebook"> <use href="./icons.svg#facebook"></use></svg>
                     </a>
                 </li>
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка linkedin" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка linkedin" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
                     </a>
                 </li>            
-         </ul>
+        </ul>
     </div>
-    <div class="container-subscribe">
-        <p class="text-subscribe" >Підпишіться на розсилку</p>
-        <form class="form-subscribe" name="form-subscribe">
-            <label class="group-subscribe">
-            <input  
-                class="field-subscribe" 
-                type="email" 
-                name="user-mail" 
-                placeholder="E-mail"
-                required>
-           <!-- <span class="label-subscribe" lang="en">E-mail</span>  -->
-        </label>
-    <button class="button button-subscribe" type="submit"> Підписатися
-        <svg class="icon-subscribe" width="24" height="24" aria-label="іконка subscribe"> <use href="./icons.svg#icon-icon-send"></use></svg>
-    </button>
-        </form>
-    </div>
+<div class="subscribe__container">
+    <p class="subscribe__text" >Підпишіться на розсилку</p>
+    <form class="subscribe__form" name="form-subscribe">
+        <label class="subscribe__group">
+        <input  
+            class="subscribe__field" 
+            type="email" 
+            name="user-mail" 
+            placeholder="E-mail"
+            required>
+    </label>
+<button class="subscribe__button button" type="submit"> Підписатися
+    <svg class="subscribe__icon" width="24" height="24" aria-label="іконка subscribe"> <use href="./icons.svg#icon-icon-send"></use></svg>
+</button>
+    </form>
+</div>
 </div>
 </footer>
 </body>
