--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-------FEATURE------->
 <section class="feature section">
     <div class="feature__container container">
-    <h2 class="feature__title-vissualy-hidden">Особливості</h2>
+    <h2 class="title-vissualy-hidden">Особливості</h2>
 <ul class="feature__list list">
     <li class="feature__item">
         <div class="feauture__icon">
@@ -269,42 +269,42 @@
         </div>
         <div class="join">
         <p class="join__text">Приєднуйтесь</p>
-        <ul class="list list-join">
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка instagram" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка instagram"> <use href="./icons.svg#instagram"></use></svg>
+        <ul class="join__list list">
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка instagram" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка instagram"> <use href="./icons.svg#instagram"></use></svg>
                     </a>
                 </li>
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка twiter" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка twiter"> <use href="./icons.svg#twiter"></use></svg>
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка twiter" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка twiter"> <use href="./icons.svg#twiter"></use></svg>
                     </a>
                 </li>
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка facebook" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка facebook"> <use href="./icons.svg#facebook"></use></svg>
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка facebook" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка facebook"> <use href="./icons.svg#facebook"></use></svg>
                     </a>
                 </li>
-                <li class="list-item-join">
-                    <a class="link link-join" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка linkedin" >
-                        <svg class="icon-join" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
+                <li class="join__item">
+                    <a class="join__link link" href="" target="_blank"  rel="noopener noreferrer nofollow" aria-label="іконка linkedin" >
+                        <svg class="join__icon" width="20" height="20" aria-label="іконка linkedin"> <use href="./icons.svg#linkedin"></use></svg>
                     </a>
                 </li>            
         </ul>
     </div>
-<div class="container-subscribe">
-    <p class="text-subscribe" >Підпишіться на розсилку</p>
-    <form class="form-subscribe" name="form-subscribe">
-        <label class="group-subscribe">
+<div class="subscribe__container">
+    <p class="subscribe__text" >Підпишіться на розсилку</p>
+    <form class="subscribe__form" name="form-subscribe">
+        <label class="subscribe__group">
         <input  
-            class="field-subscribe" 
+            class="subscribe__field" 
             type="email" 
             name="user-mail" 
             placeholder="E-mail"
             required>
     </label>
-<button class="button button-subscribe" type="submit"> Підписатися
-    <svg class="icon-subscribe" width="24" height="24" aria-label="іконка subscribe"> <use href="./icons.svg#icon-icon-send"></use></svg>
+<button class="subscribe__button button" type="submit"> Підписатися
+    <svg class="subscribe__icon" width="24" height="24" aria-label="іконка subscribe"> <use href="./icons.svg#icon-icon-send"></use></svg>
 </button>
     </form>
 </div>
@@ -314,48 +314,48 @@
 <!----------MODAL WINDOW------->
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-        <button class="modal-button" type="button" data-modal-close>
-            <svg class="icon-close" width="18" height="18" aria-label="іконка close"> <use href="./icons.svg#close-icon"></use></svg>  
+        <button class="modal__button button" type="button" data-modal-close>
+            <svg class="modal__icon-close" width="18" height="18" aria-label="іконка close"> <use href="./icons.svg#close-icon"></use></svg>  
         </button>
-        <strong class="modal-label"> Залиште свої дані, ми вам передзвонимо</strong>
-        <form class="modal-form" name="modal-form">
-            <div class="modal-form-group" role="group">
-                <label class="modal-form-label" for="user-name">Ім'я</label>
-                <div class="modal-form-wrapper">
-                    <input class="modal-form-field" 
+        <strong class="modal__label"> Залиште свої дані, ми вам передзвонимо</strong>
+        <form class="form" name="modal-form">
+            <div class="form__group" role="group">
+                <label class="form__label" for="user-name">Ім'я</label>
+                <div class="form__wrapper">
+                    <input class="form__field" 
                     type="text"
                     name="user-name" 
                     id="user-name"
                     required>
-                    <svg class="icon-form" width="12" height="12" aria-label="іконка user"> <use href="./icons.svg#icon-name"></use></svg>
+                    <svg class="form__icon" width="12" height="12" aria-label="іконка user"> <use href="./icons.svg#icon-name"></use></svg>
                 </div>
-                <label class="modal-form-label" for="user-tel">Телефон</label>
-                <div class="modal-form-wrapper">
-                    <input class="modal-form-field" 
+                <label class="form__label" for="user-tel">Телефон</label>
+                <div class="form__wrapper">
+                    <input class="form__field" 
                     type="tel" 
                     name="user-tel" 
                     id="user-tel"
                     required>
-                    <svg class="icon-form" width="12" height="12" aria-label="іконка telefon"> <use href="./icons.svg#icon-tel"></use></svg>
+                    <svg class="form__icon" width="12" height="12" aria-label="іконка telefon"> <use href="./icons.svg#icon-tel"></use></svg>
                 </div>
-                <label class="modal-form-label" for="user-mail">Пошта</label>
-                <div class="modal-form-wrapper">
-                    <input class="modal-form-field" 
+                <label class="form__label" for="user-mail">Пошта</label>
+                <div class="form__wrapper">
+                    <input class="form__field" 
                     type="email" 
                     name="user-mail"
                     id="user-mail"
                     required>
-                    <svg class="icon-form" width="12" height="12" aria-label="іконка mail"> <use href="./icons.svg#icon-mail"></use></svg>
+                    <svg class="form__icon" width="12" height="12" aria-label="іконка mail"> <use href="./icons.svg#icon-mail"></use></svg>
                 </div>
-                <label class="modal-form-label" for="user-message">Коментар</label>
-                    <textarea class="modal-form-message" name="user-message" id="user-message" rows="7" placeholder="Введіть текст"></textarea>
+                <label class="form__label" for="user-message">Коментар</label>
+                    <textarea class="form__message" name="user-message" id="user-message" rows="7" placeholder="Введіть текст"></textarea>
             </div>
-            <div class="modal-form-agreement" role="group">
-                <input class="modal-form-checkbox" type="checkbox" id="user-agreement">
-                <svg class="icon-checkbox" width="11" height="8" aria-label="іконка check"> <use href="./icons.svg#icon-check"></use></svg>
-                <label class="agreement-label" for="user-agreement">Погоджуюся з розсилкою та приймаю <a class="link link-agreement" href="">Умови договору</a></label>
+            <div class="agreement" role="group">
+                <input class="agreement__checkbox" type="checkbox" id="user-agreement">
+                <svg class="agreement__icon" width="11" height="8" aria-label="іконка check"> <use href="./icons.svg#icon-check"></use></svg>
+                <label class="agreement__label" for="user-agreement">Погоджуюся з розсилкою та приймаю <a class="agreement__link link" href="">Умови договору</a></label>
             </div>
-            <button class="button modal-form-button" type="submit">Відправити</button>
+            <button class="agreement__button button" type="submit">Відправити</button>
         </form>
     </div>
 </div>
